# level-thumbs-mod

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
src/hooks/: LevelCell.cpp  LevelInfoLayer.cpp  PauseLayer.cpp
src/layers/: ThumbnailPopup.cpp  ThumbnailPopup.hpp
src/managers/: CacheControls.cpp  SettingsManager.cpp  SettingsManager.hpp  ThumbnailManager.cpp  ThumbnailManager.hpp
src/utils/: Zoom.cpp  Zoom.hpp
